# repviz

./: .gitignore  README.md  __init__.py  cli.py  inference.py  losses.lst  models.py  pyproject.toml  tools.py  user_demo.py  utils.py
.github/workflows/: workflow.yaml
api/: app.py  routes.py
api/src/: app.py  main.py  stats.py  trainer.py  utils.py
examples/: ffn_example.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: ActivationHistogram.vue  (+7 more)
model/: ffn_covtype.pth  ffn_covtype_attn.pth  ffn_covtype_v1.pth  ffn_covtype_v1_lr00001.pth  ffn_covtype_v1_lr0002.pth  ffn_covtype_v1_lr0003.pth  ffn_covtype_v1_lr0005.pth  ffn_covtype_v1_lr001.pth  ffn_covtype_v1_lr003.pth  ffn_covtype_v1_lr005.pth  ffn_covtype_v1kai.pth  ffn_covtype_v1overfit.pth  ffn_covtype_v1residual.pth  ffn_covtype_v1silu.pth  ffn_covtype_v2.pth
notebooks/: model_viz.ipynb  new_test.ipynb  test.ipynb  test_attn.ipynb  test_y.npy
outputs/FFN/: model_structure.json  predictions.json
outputs/FFN2/: gradients.json  model_structure.json  predictions.json
outputs/TinyTabularAttentionModel/: activations.json  model_structure.json  predictions.json  weights.json
repviz/: inference.py  models.py
src/: app.py  cka.py  collector.py  dashboard_utils.py  dim_reduction.py  hook_base.py  hooks.py  mapper.py  monitor.py  repvis.py  stats.py  trainer.py  utils.py
src/analysis/: tflops_estimator.py  weight_analysis.py
src/examples/: ffn.py
src/hooks/: activation_hooks.py  gradient_hooks.py
src/model/: ffn.py
(+1 files in other folders)
