[project]
name = "neural-layer-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alive-progress>=3.2.0",
    
    
    "pip>=25.0.1",
    "ptflops>=0.7.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "umap>=0.1.1",
    "plotly>=6.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "umap-learn>=0.5.9.post2",
]
[project.scripts]
repviz = "repviz.cli:serve"